Change message in login form and fix bug overlap

--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -30,7 +30,7 @@
   }
 
   #login-button{
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 }
 
@@ -72,8 +72,8 @@
   padding-bottom: -5px;
 }
 
-.height28 {
-  height: 28px;
+.height10 {
+  height: 10px;
 }
 
 .padding-top20 {
